# ccnes

./: CLAUDE.md  Cargo.toml  README.md  build.sh
core/: Cargo.toml  audio_demo.nes
core/benches/: performance_bench.rs
core/src/: bus.rs  controller.rs  debugger.rs  lib.rs  nes.rs  savestate.rs  test_rom.rs
core/src/apu/: buffer.rs  filters.rs  mod.rs  resampler.rs
core/src/cartridge/: mod.rs
core/src/cartridge/mappers/: mapper0.rs  mapper1.rs  mapper11.rs  mapper2.rs  mapper3.rs  mapper4.rs  mapper5.rs  mapper66.rs  mapper7.rs  mapper9.rs  mod.rs
core/src/cpu/: addressing.rs  instructions.rs  mod.rs  opcodes.rs  optimized.rs
core/src/ppu/: mod.rs  optimized.rs  palette.rs
core/tests/: apu_improved_test.rs  apu_test.rs  audio_demo.rs  audio_test.rs  basic_test.rs  bus_conflicts_test.rs  controller_test.rs  cpu_instructions_test.rs  savestate_test.rs  sprite_debug.rs  sprite_test.rs  test_debug.rs
native/: Cargo.toml  README.md
native/src/: debugger_ui.rs  main.rs
wasm/: Cargo.toml  README.md  build.sh  index.html
wasm/src/: lib.rs
wasm/www/: index.html  index.js
