[workspace]
members = [
    "core",
    "native",
    "wasm",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["CCNES Contributors"]
edition = "2021"
license = "MIT"
repository = "https://github.com/yourusername/ccnes"

[workspace.dependencies]
# Core dependencies
bitflags = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"

# Native dependencies
sdl2 = { version = "0.35", features = ["bundled"] }
env_logger = "0.10"
clap = { version = "4.4", features = ["derive"] }

# WASM dependencies
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"
console_error_panic_hook = "0.1"
wasm-logger = "0.2"

[profile.release]
opt-level = 3
lto = true

[profile.wasm]
inherits = "release"
opt-level = "z"
lto = true