[package]
name = "ccnes-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bitflags = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
log = { workspace = true }
bincode = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = "3.0"