[package]
name = "ccnes-wasm"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
ccnes-core = { path = "../core" }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
console_error_panic_hook = { workspace = true }
wasm-logger = { workspace = true }
log = { workspace = true }

[dependencies.web-sys]
workspace = true
features = [
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "HtmlInputElement",
    "ImageData",
    "Window",
    "KeyboardEvent",
    "File",
    "FileReader",
    "Blob",
    "console",
    "AudioContext",
    "AudioNode",
    "AudioDestinationNode",
    "ScriptProcessorNode",
]

[dependencies.js-sys]
workspace = true